# Alya-RS

./: Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
src/commands/: mod.rs
src/commands/admin/: antilink.rs  ban.rs  delete_cmd.rs  demote.rs  goodbye.rs  kick.rs  kickall.rs  mod.rs  promote.rs  settings.rs  tag.rs  update.rs  warn.rs  welcome.rs
src/commands/ai/: chatgpt.rs  claude.rs  copilot.rs  gemini.rs  mod.rs  sora.rs  vision.rs
src/commands/downloads/: facebook.rs  instagram.rs  mediafire.rs  mod.rs  play.rs  spotify.rs  tiktok.rs  youtube.rs  ytmp3.rs  ytmp4.rs
src/commands/economy/: balance.rs  beg.rs  blackjack.rs  board.rs  coinflip.rs  crime.rs  daily.rs  deposit.rs  fish.rs  givecoins.rs  info.rs  inventory.rs  mod.rs  roulette.rs  setcoins.rs  shop.rs  slut.rs  steal.rs  withdraw.rs  work.rs
src/commands/fun/: angry.rs  bored.rs  coffee.rs  cry.rs  dance.rs  gay.rs  hug.rs  kill.rs  kiss.rs  love.rs  mod.rs  slap.rs  sleep.rs  textpro.rs  wanted.rs
src/commands/gacha/: addrw.rs  ainfo.rs  antirobo.rs  claim.rs  dar.rs  delwaifu.rs  desbloquear.rs  give.rs  giveall.rs  harem.rs  listwaifu.rs  mod.rs  resetwaifus.rs  rollwaifu.rs  sell.rs  steal_waifu.rs  trade.rs  vchars.rs  vote.rs  wcow.rs  wimage.rs  winfo.rs  wtop.rs  wvideo.rs
src/commands/games/: adivinanza.rs  dare.rs  fight.rs  marry.rs  math.rs  mod.rs  ppt.rs  ship.rs  slot.rs  tictactoe.rs  trivia.rs
src/commands/general/: help.rs
src/commands/group/: info.rs  link.rs  mod.rs
src/commands/level/: profile.rs
src/commands/nsfw/: cum.rs  fuck.rs  hbikini.rs  himages.rs  (+6 more)
src/db/: mod.rs  models.rs  service.rs
src/handlers/: message.rs  mod.rs  welcome.rs
src/services/: economy.rs  gacha.rs  level.rs  mod.rs
src/utils/: cache.rs  format.rs  helpers.rs  mod.rs
(+37 files in other folders)
