[package]
name = "alya-rs"
version = "0.1.0"
edition = "2021"
authors = ["DeltaByte"]
description = "Alya Kujou Bot - Port a Rust usando whatsapp-rust"

[[bin]]
name = "alya-rs"
path = "src/main.rs"

[dependencies]
# WhatsApp
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", package = "whatsapp-rust-tokio-transport", branch = "main" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", package = "whatsapp-rust-ureq-http-client", branch = "main" }
wacore = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
mongodb = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }

# URL encoding
urlencoding = "2"

# Bytes
bytes = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"
dashmap = "6"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
hex = "0.4"

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# Image processing (for welcome images)
image = { version = "0.25", features = ["jpeg", "png"] }

# Config
dotenvy = "0.15"
